<resources>
    <string name="app_name">useradmin</string>
    <string name="full_name">Full Name:</string>
    <string name="email_username">Email/UserName:</string>
    <string name="password">Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="username">UserName:</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="logout">Logout</string>
    <string name="profile">profile</string>
</resources>
